tests/bad/polymorphic_type_recursion.ppl
data Thing a = C1 | C2 (Thing (a, a));

C1


